--- a/books/03/046-第四十六章-轮中之轮.md
+++ b/books/03/046-第四十六章-轮中之轮.md
@@ -598,7 +598,7 @@
 
 但克莱丽丝并没有出声回答，而只是盯着她的眼睛。接着娜迪亚的加密邮箱里就收到了一个小文件。
 
-**心灵法师工会里面的几个朋友帮我们搞到的，** 克莱丽丝说。
+**心灵法师公会里面的几个朋友帮我们搞到的，** 克莱丽丝说。
 
 娜迪亚皱起了眉头，读起了毫无排版的 txt。在世风日下的今天，这已经相当少见了。
 
