--- a/books/03/039-第三十九章-无法愈合的伤痕.md
+++ b/books/03/039-第三十九章-无法愈合的伤痕.md
@@ -12,7 +12,7 @@
 
 心灵法术也被广泛认为是对个人隐私和自由意志的不当侵犯，应当尽量不要施展。
 
-特此制订，2044 年 6 月 22 日，纪律委员会
+特此制订，2044 年 6 月 22 日，规章委员会
 
 **第一节：有组织的培训与监管**
 
@@ -54,7 +54,7 @@
 
 在本法案规定的框架之下，本组织对执行官所批准的一切行动都保有审议权，也可以逐项推翻执行官的批复。执行官需要向本组织提交年度报告以供审阅。
 
-**—《2044 年会议纪要》，魔法少女行会纪律委员会**
+**—《2044 年会议纪要》，魔法少女行会规章委员会**
 
 记忆的灰烬
 在口中留下苦涩。
