--- a/books/01/001-第一章-许愿.md
+++ b/books/01/001-第一章-许愿.md
@@ -896,7 +896,7 @@
 
 丘比发送了一个听起来有些无奈的叹气声。它有许多类似的人性化习惯，很容易让别人误以为它拥有感情。
 
-**不，麻美，我们没有，** 它答道。麻美发出缎带卷住近处的一栋大楼。 **一切都和以前一样。我们所有的观测结果都显示她彻底从这个世界上消失了，像灵魂宝石用尽的魔法少女一样彻底。只有你还坚持认为她没有消失。**
+**不，巴麻美，我们没有，** 它答道。麻美发出缎带卷住近处的一栋大楼。 **一切都和以前一样。我们所有的观测结果都显示她彻底从这个世界上消失了，像灵魂宝石用尽的魔法少女一样彻底。只有你还坚持认为她没有消失。**
 
 麻美想要说话，但丘比抢先打断了她。
 
