--- a/books/03/041-第四十一章-因与果.md
+++ b/books/03/041-第四十一章-因与果.md
@@ -660,7 +660,7 @@
 
 “只是释放一下压力。也没指望你能理解，你个臭老鼠。”
 
-**你应该感谢我们才对，** 它再次重复了一遍，身形渐渐消失。**不过能见了你一面还是很不错呢，杏子。**
+**你应该感谢我们才对，** 它再次重复了一遍，身形渐渐消失。**不过能见了你一面还是很不错呢，佐仓杏子。**
 
 不久丘比就消失不见，只留下杏子呆站原地，手里松松垮垮地拖着长矛。
 
